--- a/estilos/style.css
+++ b/estilos/style.css
@@ -407,6 +407,7 @@ footer>nav>ul>li>a:hover {
 
   .sobre_produtos_filho h2 {
     text-align: center;
+    font-size: 5rem;
   }
 
   .sobre_produtos_filho {
