--- a/views/base.html
+++ b/views/base.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="estilos/style.css" />
-  <title>História </title>
+  <title> ecommercer - #####BASE####### </title>
 </head>
 
 <body>
@@ -21,10 +21,10 @@
       <div></div>
     </div>
     <ul class="menu">
-      <li> <img class="logo" src="logos/logo6.png" alt="logo_leilabolos" /></li>
+      <li> <img class="logo" src="icone/icone_rappi.png" alt="logo_" /></li>
       <li></li>
       <li></li>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="historia.html">História</a></li>
       <li><a href="cardapio.html">Cardápio</a></li>
       <li><a href="contato.html">Contato</a></li>
       <li>
@@ -50,35 +50,38 @@
   </header>
 
   <main>
-    <article class="historia">
-      <h1>Uma História de Sabores </h1>
-      <br>
-<p>
-  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi doloribus voluptatum vel sunt explicabo dignissimos esse nemo, perferendis consequatur autem corporis quisquam sed eveniet iusto suscipit repellat, ipsa perspiciatis! Sequi!
-  Itaque voluptate at, porro qui voluptates error expedita. Eaque sequi libero excepturi dolor commodi doloribus magnam optio, repellendus minima dolorem laborum incidunt eos voluptatem quam sint! Eligendi maxime odit architecto.
-  Ea id magnam ex perspiciatis assumenda, blanditiis expedita est corporis quae, corrupti ad maiores quia molestias adipisci modi voluptatem odio rem, iure possimus iste ullam obcaecati nesciunt tenetur harum! Eum.
-  </p>
-    </article>
    
     
   </main>
 
   <footer>
-    <nav class="direcao_footer" >
+    <nav>
       <ul>
-        <li><a href="#">Horário de atendimento:
-            seg a sáb das 9h às 18h.</a></li>
+        <li class="traco"><a href="#">Sobre</a></li>
+        <li class="traco"><a href="#">Políticas de Privacidade</a></li>
+        <li class="traco"><a href="#">Fale Conosco</a></li>
+        <li class="traco"><a href="#">Termos de Uso</a></li>
+        <li class="traco" style="border-right: none;"><a href="#">Trabalhe conosco</a></li>
       </ul>
+     
+    </nav>
 
-      <ul class="logos_footer">
-        <li><a href="contato.html"><img class="logo_footer_filho"
-              src="icone/local.png" alt="icone_mapa"></a></li>
-        <li><img class="logo_footer_filho" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
-        <li><img class="logo_footer_filho" src="icone/envelope.png" alt="logo_envelope"></li>
-        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="logo_footer_filho"
-              src="icone/instagram.png" alt="instagram"></a></li>
-
-      </ul>
+    
+      <nav class="direcao_footer" >
+        <ul>
+          <li><a href="#">Horário de atendimento:
+              seg a sáb das 9h às 18h.</a></li>
+        </ul>
+  
+        <ul class="logos_footer">
+          <li><img class="logo_footer_filho" src="icone/local.png" alt="icone_mapa"></li>
+          <li><img class="logo_footer_filho" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
+          <li><img class="logo_footer_filho" src="icone/envelope.png" alt="logo_envelope"></li>
+          <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="logo_footer_filho"
+                src="icone/instagram.png" alt="instagram"></a></li>
+  
+        </ul>
+      </nav>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
