--- a/doces.ejs
+++ b/doces.ejs
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="estilos/style.css" />
-  <title> LEILA</title>
+  
+  <title> Doces </title>
 </head>
 
-<body>
+<body id="top">
   <header>
 
     <div class="hamburger">
@@ -21,25 +22,24 @@
       <div></div>
     </div>
     <ul class="menu">
-      <li> <img class="logo" src="logos/logo6.png" alt="logo_leila" /></li>
-      <li> <img class="logo" style="width: 22rem;" src="logos/Bolos da Leila.png" alt="logo_leila" /></li>
+      <li> <a class="link_logo" href="#top"><img class="logo" src="logos/logo6.png" alt="logo_leilabolos" /></a>
+      <a href="/"><img class="logo" src="logos/Bolos da Leila.png" style="width: 22rem;"
+            alt="logo_leilabolos" /></a></li>
       <li></li>
       <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li><a href="cardapio.html">Produtos</a></li>
-      <li><a href="contato.html">Contato</a></li>
+      <li><a href="/historia">História</a></li>
+      <li><a href="/cardapio">Cardápio</a></li>
+      <li><a href="/contato">Contato</a></li>
       <li>
         <!-- Carrinho no Menu -->
         <div id="carrinho-menu">
           <a href="#">
-            <img class="logo_usuario" src="logos/do-utilizador.png" alt="logo_usuario" />
+            <img class="logo_menu" src="logos/carrinho-de-compras.png" alt="logo_carrinho" />
           </a>
-          <a href="#">
-            <img class="logo_carrinho" src="logos/carrinho-de-compras.png" alt="logo_carrinho" />
-          </a>
+
         </div>
+      
+      <a href="/login"><img class="logo_menu" src="logos/do-utilizador.png" alt="logo_perfil"></a>
       </li>
     </ul>
 
@@ -87,27 +87,30 @@
     </div>
   </main>
   <footer>
-    <nav>
+    <nav class="direcao_footer">
       <ul>
-        <li class="traco"><a href="#">Sobre a Leila</a></li>
-        <li class="traco"><a href="#">Políticas de Privacidade</a></li>
-        <li class="traco" style="border-right: none;"><a href="#">Contato</a></li>
+        <li><a
+            href="https://www.google.com/maps/place/Bolo+da+Leila/@-23.669609,-46.744016,14z/data=!4m6!3m5!1s0x94ce5186619a2137:0xa4a58de34407d9e3!8m2!3d-23.6696087!4d-46.7440156!16s%2Fg%2F11gcz3kbft?hl=pt-BR&entry=ttu&g_ep=EgoyMDI0MTAxNi4wIKXMDSoASAFQAw%3D%3D"
+            target="_blank">Horário de atendimento:
+            seg a sáb das 9h às 18h.</a></li>
       </ul>
-      <ul class="patrocinadores">
-        <li><img class="patrocinador" src="icone/local.png" alt=""></li>
-        <li><img class="patrocinador" src="icone/whatsapp.png" alt=""></li>
-        <li><img class="patrocinador" src="icone/envelope.png" alt=""></li>
-        <li><a href="https://www.instagram.com/leilaabolos/"><img class="patrocinador" src="icone/instagram.png" alt=""></a></li>
+
+      <ul class="logos_footer">
+        <li><a href="/contato"><img class="logo_footer_filho" src="icone/local.png" alt="icone_mapa"></a>
+        <li><a href="https://api.whatsapp.com/send?phone=5511980802132" target="_blank"><img class="logo_footer_filho" src="icone/whatsapp.png" alt="icone_whatsapp"></a></li>
+        <li><a href="mailto:leilabolos@gmail.com"><img class="logo_footer_filho" src="icone/envelope.png" alt="logo_envelope"></a></li>
+        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="logo_footer_filho"
+              src="icone/instagram.png" alt="instagram"></a></li>
 
       </ul>
     </nav>
-
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="script.js"></script>
+  <script src="./js/dom_evento.js" defer></script>
 </body>
 
 </html>
